# supergood-py

./: .env  .gitignore  README.md  api.py  client.py  constants.py  logger.py  publish.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test.yml
src/: client.py
src/supergood/: __init__.py  api.py  client.py  constants.py  helpers.py  logger.py  remote_config.py  repeating_thread.py  worker.py
src/supergood/vendors/: aiohttp.py  helpers.py  http.py  httpx.py  paramiko.py  requests.py  urllib3.py
supergood/: interceptor.py
test/: core.py  db.json  helper.py  test_client.py  test_core.py  test_ignored_domains.py
tests/: compass-response.json  compass_constants.py  conftest.py  constants.py  core.py  helper.py  requirements.txt  test_core.py  test_dont_log.py  test_dont_redact_single_key.py  test_hashing_entire_body.py  test_hashing_single_key.py  test_ignore_redaction.py  test_ignored_domains.py  test_redacting_entire_body.py  test_remote_config.py  test_repeating_thread.py
tests/caching/: test_location_request_body.py  test_location_request_headers.py  test_method.py
tests/redaction/: test_no_redaction.py  test_redact_all.py  test_redact_arrays.py  test_redact_by_default.py  test_redaction.py  test_redaction_failures.py  test_top_level_redaction.py
tests/vendors/: test_httpx.py
