[project]
name = "supergood"
version = "0.0.1"
authors = [
    { name = "Alex Klarfeld", email = "alex@supergood.ai" }
]
description = "Supergood's Python Client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://supergood.ai"
"Bug Tracker" = "https://github.com/supergoodsystems/supergood-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
