[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supergood"
description = "The Python client for Supergood"
readme = "README.md"
version= "1.1.9"
requires-python = ">=3.7"
authors = [
    { name = "Alex Klarfeld" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp",
    "httpx",
    "jsonpickle",
    "pydash==7.0.1",
    "python-dotenv==1.0.0",
    "requests",
    "tldextract>=5",
    "urllib3",
]

[project.optional-dependencies]
test = [
    "pytest-mock==3.10.0",
    "pytest==7.2.1",
    "pytest_httpserver==1.0.8",
    "Werkzeug",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
